# svg-renderer

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md
.github/workflows/: publish.yml
examples/: render_perf.rs  render_pipeline.rs  render_svg.rs
src/: error.rs  image.rs  lib.rs  options.rs  pipeline.rs  renderer.rs  resource.rs  vulkan.rs
