[package]
name = "svg-renderer"
version = "1.0.1"
edition = "2024"
authors = ["limao996 <limao7325@163.com>"]
description = "A high-performance SVG-to-raster renderer powered by Skia, with CPU and optional Vulkan GPU backends"
license = "MIT"
keywords = ["svg", "renderer", "skia", "vulkan", "raster"]
categories = ["graphics", "multimedia::images", "rendering::graphics-api"]
readme = "README.md"
repository = "https://github.com/limao996/svg-renderer"
documentation = "https://docs.rs/svg-renderer"
homepage = "https://github.com/limao996/svg-renderer"
exclude = ["examples/*.png", ".github"]

[features]
default = ["vulkan-backend"]
vulkan-backend = ["dep:ash"]

[dependencies]
ash = { version = "0.38", default-features = true, optional = true }
skia-safe = { version = "0.99", default-features = true, features = [
    "vulkan",
    "svg",
    "webp",
    "jpeg",
    "no-compile",
    "ureq",
    "freetype-woff2",
] }
thiserror = "2"

[dev-dependencies]
futures = "0.3"
pollster = "0.4"
